<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/pref_header_data">

        <Preference
            app:key="import_database"
            app:icon="@drawable/round_install_mobile_48"
            app:title="@string/import_data"
            app:summary="@string/pref_import_summary"/>

        <Preference
            app:key="export_database"
            app:icon="@drawable/round_backup_48"
            app:title="@string/export_data"
            app:summary="@string/pref_export_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_header_security">

        <SeekBarPreference
            app:key="max_auth_attempts"
            app:title="@string/pref_attempts"
            app:summary="@string/pref_attempts_summary"
            app:showSeekBarValue="true"
            app:seekBarIncrement="1"
            app:persistent="true"
            android:defaultValue="3"
            app:min="0"
            android:max="100" />

        <EditTextPreference
            app:key="master_password"
            app:title="@string/pref_master_password"
            app:summary="@string/pref_master_password_summary" />

        <ListPreference
            app:key="delete_all_accounts"
            app:title="@string/delete_all_accounts"
            app:entries="@array/delete_all_accounts_entries"
            app:entryValues="@array/delete_all_accounts_values" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_header_automation">

        <SwitchPreferenceCompat
            app:key="enable_automation"
            app:title="@string/pref_enable_automation" />

        <SeekBarPreference
            app:key="auto_closing"
            app:dependency="enable_automation"
            app:title="@string/pref_auto_closing"
            app:summary="@string/pref_auto_closing_summary"
            app:showSeekBarValue="true"
            app:seekBarIncrement="1"
            app:persistent="true"
            android:defaultValue="60"
            app:min="0"
            android:max="300" />

        <SeekBarPreference
            app:key="auto_disconnect"
            app:dependency="enable_automation"
            app:title="@string/pref_auto_disconnect"
            app:summary="@string/pref_auto_disconnect_summary"
            app:showSeekBarValue="true"
            app:seekBarIncrement="1"
            app:persistent="true"
            android:defaultValue="30"
            app:min="0"
            android:max="120" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_header_notification">

        <SwitchPreferenceCompat
            app:key="enable_notification"
            app:defaultValue="false"
            app:title="@string/pref_enable_notif" />

        <SeekBarPreference
            app:key="notif_backup"
            app:dependency="enable_notification"
            app:title="@string/pref_notif_backup"
            app:summary="@string/pref_notif_backup_summary"
            app:showSeekBarValue="true"
            app:seekBarIncrement="1"
            app:persistent="true"
            android:defaultValue="30"
            app:min="1"
            android:max="180" />

    </PreferenceCategory>

</PreferenceScreen>